fix:spacing for input and badges

--- a/home.css
+++ b/home.css
@@ -237,7 +237,7 @@ iframe
     }
     .card-collection{
       width: 100%;
-      height: 215em;
+      height: 232em;
     }
     .input-collection{
       width: 100%;
